<resources>
    <string name="app_name">ShoeStoreAppUdacityNanodegree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="shoe_details">Kindly fill the form by entering the details of the new shoe</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name_list">Name: %1$s</string>
    <string name="brand_list">Brand: %1$s</string>
    <string name="description_list">Description: %1$s</string>
    <string name="size_list">Size: %1$s</string>
</resources>